@@ -21,14 +21,14 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.UUID;
 import java.util.jar.Attributes;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
 import java.util.zip.ZipOutputStream;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 import org.springframework.util.StringUtils;
 
@@ -40,65 +40,66 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Phillip Webb
  * @author Andy Wilkinson
  */
-public class ChangeableUrlsTests {
+class ChangeableUrlsTests {
 
-	@Rule
-	public TemporaryFolder temporaryFolder = new TemporaryFolder();
+	@TempDir
+	File tempDir;
 
 	@Test
-	public void folderUrl() throws Exception {
+	void folderUrl() throws Exception {
 		URL url = makeUrl("myproject");
 		assertThat(ChangeableUrls.fromUrls(url).size()).isEqualTo(1);
 	}
 
 	@Test
-	public void fileUrl() throws Exception {
-		URL url = this.temporaryFolder.newFile().toURI().toURL();
+	void fileUrl() throws Exception {
+		File file = new File(this.tempDir, "file");
+		file.createNewFile();
+		URL url = file.toURI().toURL();
 		assertThat(ChangeableUrls.fromUrls(url)).isEmpty();
 	}
 
 	@Test
-	public void httpUrl() throws Exception {
+	void httpUrl() throws Exception {
 		URL url = new URL("https://spring.io");
 		assertThat(ChangeableUrls.fromUrls(url)).isEmpty();
 	}
 
 	@Test
-	public void httpsUrl() throws Exception {
+	void httpsUrl() throws Exception {
 		URL url = new URL("https://spring.io");
 		assertThat(ChangeableUrls.fromUrls(url)).isEmpty();
 	}
 
 	@Test
-	public void skipsUrls() throws Exception {
-		ChangeableUrls urls = ChangeableUrls.fromUrls(makeUrl("spring-boot"),
-				makeUrl("spring-boot-autoconfigure"), makeUrl("spring-boot-actuator"),
-				makeUrl("spring-boot-starter"),
+	void skipsUrls() throws Exception {
+		ChangeableUrls urls = ChangeableUrls.fromUrls(makeUrl("spring-boot"), makeUrl("spring-boot-autoconfigure"),
+				makeUrl("spring-boot-actuator"), makeUrl("spring-boot-starter"),
 				makeUrl("spring-boot-starter-some-thing"));
 		assertThat(urls).isEmpty();
 	}
 
 	@Test
-	public void urlsFromJarClassPathAreConsidered() throws Exception {
-		File relative = this.temporaryFolder.newFolder();
-		URL absoluteUrl = this.temporaryFolder.newFolder().toURI().toURL();
-		File jarWithClassPath = makeJarFileWithUrlsInManifestClassPath(
-				"project-core/target/classes/", "project-web/target/classes/",
-				"does-not-exist/target/classes", relative.getName() + "/", absoluteUrl);
-		new File(jarWithClassPath.getParentFile(), "project-core/target/classes")
-				.mkdirs();
+	void urlsFromJarClassPathAreConsidered() throws Exception {
+		File relative = new File(this.tempDir, UUID.randomUUID().toString());
+		relative.mkdir();
+		File absolute = new File(this.tempDir, UUID.randomUUID().toString());
+		absolute.mkdirs();
+		URL absoluteUrl = absolute.toURI().toURL();
+		File jarWithClassPath = makeJarFileWithUrlsInManifestClassPath("project-core/target/classes/",
+				"project-web/target/classes/", "does-not-exist/target/classes", relative.getName() + "/", absoluteUrl);
+		new File(jarWithClassPath.getParentFile(), "project-core/target/classes").mkdirs();
 		new File(jarWithClassPath.getParentFile(), "project-web/target/classes").mkdirs();
-		ChangeableUrls urls = ChangeableUrls
-				.fromClassLoader(new URLClassLoader(new URL[] {
-						jarWithClassPath.toURI().toURL(), makeJarFileWithNoManifest() }));
+		ChangeableUrls urls = ChangeableUrls.fromClassLoader(
+				new URLClassLoader(new URL[] { jarWithClassPath.toURI().toURL(), makeJarFileWithNoManifest() }));
 		assertThat(urls.toList()).containsExactly(
 				new URL(jarWithClassPath.toURI().toURL(), "project-core/target/classes/"),
-				new URL(jarWithClassPath.toURI().toURL(), "project-web/target/classes/"),
-				relative.toURI().toURL(), absoluteUrl);
+				new URL(jarWithClassPath.toURI().toURL(), "project-web/target/classes/"), relative.toURI().toURL(),
+				absoluteUrl);
 	}
 
 	private URL makeUrl(String name) throws IOException {
-		File file = this.temporaryFolder.newFolder();
+		File file = new File(this.tempDir, UUID.randomUUID().toString());
 		file = new File(file, name);
 		file = new File(file, "target");
 		file = new File(file, "classes");
@@ -107,10 +108,9 @@ public class ChangeableUrlsTests {
 	}
 
 	private File makeJarFileWithUrlsInManifestClassPath(Object... urls) throws Exception {
-		File classpathJar = this.temporaryFolder.newFile("classpath.jar");
+		File classpathJar = new File(this.tempDir, "classpath.jar");
 		Manifest manifest = new Manifest();
-		manifest.getMainAttributes().putValue(Attributes.Name.MANIFEST_VERSION.toString(),
-				"1.0");
+		manifest.getMainAttributes().putValue(Attributes.Name.MANIFEST_VERSION.toString(), "1.0");
 		manifest.getMainAttributes().putValue(Attributes.Name.CLASS_PATH.toString(),
 				StringUtils.arrayToDelimitedString(urls, " "));
 		new JarOutputStream(new FileOutputStream(classpathJar), manifest).close();
@@ -118,7 +118,7 @@ public class ChangeableUrlsTests {
 	}
 
 	private URL makeJarFileWithNoManifest() throws Exception {
-		File classpathJar = this.temporaryFolder.newFile("no-manifest.jar");
+		File classpathJar = new File(this.tempDir, "no-manifest.jar");
 		new ZipOutputStream(new FileOutputStream(classpathJar)).close();
 		return classpathJar.toURI().toURL();
 	}
